API Gateway Route Definition (for external users).yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-gateway
spec:
  hosts:
  - "*"
  gateways:
  - external-gateway
  http:
  - match:
    - uri:
        prefix: /api/payment
    route:
    - destination:
        host: payment-service.default.svc.cluster.local
        port:
          number: 8080
